<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/rlyt_layout_background"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:paddingLeft="110dp"
                android:orientation="horizontal"
                android:paddingTop="25dp">



                <LinearLayout
                    android:layout_weight="1"
                    android:layout_toLeftOf="@+id/iv_product_close"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/cart_color33"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tv_product_price"
                        android:layout_width="wrap_content"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainColor"
                        android:textSize="15dp" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_product_close"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="12dp"
                    android:scaleType="center"
                    android:src="@mipmap/shop_shop_close" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_product_img"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/cart_shape_square_boder"
                android:scaleType="fitXY" />
        </RelativeLayout>

        <View style="@style/HorizontalLineStyle" />

        <!--@dimen/margin291-->
        <LinearLayout
            android:id="@+id/llyt_layout_background"
            android:layout_width="match_parent"
            android:layout_height="291dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.example.tome.core.widget.MyRecyclerView
                        android:id="@+id/rv_attrs_list"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:text="@string/cart_shop_buy_num"
                        android:textColor="@color/cart_color66"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="84dp"
                        android:layout_height="24dp"
                        android:layout_margin="12dp"
                        android:background="@drawable/cart_shape_fillet_solid"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_partivipate_crowd_fundign_minue"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="center"
                            android:src="@mipmap/math_black_number_sub" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/cart_color99" />

                        <EditText
                            android:id="@+id/tv_crowd_funding_moq"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:gravity="center"
                            android:inputType="number"
                            android:singleLine="true"
                            android:text="1"
                            android:textColor="@color/cart_color33"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/cart_color99" />

                        <ImageView
                            android:id="@+id/iv_partivipate_crowd_fundign_add"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="center"
                            android:src="@mipmap/math_black_number_add" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_shop_confrim"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cart_shape_gradient_dark_btn"
                android:text="@string/cart_shop_confrim"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@mipmap/ico_select_left_bg"
                android:text="@string/cart_shop_buy"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_add2cart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@mipmap/ico_select_right_bg"
                android:text="@string/cart_shop_add_cart"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>